--- a/front-end/src/containers/Authentication/Login/styles.scss
+++ b/front-end/src/containers/Authentication/Login/styles.scss
@@ -17,8 +17,8 @@
 
   @media (max-width: 710px) {
     .div-login-form {
-      padding-top: 50px;
-      margin-bottom: 40px;
+      padding-top: 80px;
+      margin: unset;
     }
   }
 }
