--- a/front-end/src/containers/Authentication/ResetPassword/styles.scss
+++ b/front-end/src/containers/Authentication/ResetPassword/styles.scss
@@ -19,9 +19,11 @@
   }
 
   @media (max-width: 710px) {
+    background-color: #FAFBFD;
+
     .div-reset-password-form {
-      padding-top: 100px;
-      margin-bottom: 40px;
+      padding-top: 40px;
+      margin: unset;
     }
   }
 }
