--- a/front-end/src/containers/Authentication/components/FacebookButton/styles.scss
+++ b/front-end/src/containers/Authentication/components/FacebookButton/styles.scss
@@ -23,17 +23,8 @@
   }
 
   @media (max-width: 710px) {
-    height: 50px;
-    line-height: 50px;
-
-    img {
-      width: 10px;
-    }
-  }
-
-  @media (max-width: 414px) {
-    img {
-      left: 15px;
-    }
+    height: 52px;
+    line-height: 52px;
+    font-size: $mobile-regular-font-size - 2;
   }
 }
