Fixed issue 3-8 on share experience and order history

--- a/front-end/src/containers/Modals/ShareExperienceModal/styles.scss
+++ b/front-end/src/containers/Modals/ShareExperienceModal/styles.scss
@@ -46,6 +46,8 @@
   .order-feedback-header-section {
     @extend %order-feedback-section;
     padding: 40px 45px 37px 28px;
+    position: relative;
+    z-index: 99999;
 
     .order-feedback-title {
       @extend %feedback-title;
