[FE] fix issues from navbar, complete functionality

--- a/front-end/src/containers/Root/components/Header/styles.scss
+++ b/front-end/src/containers/Root/components/Header/styles.scss
@@ -187,7 +187,9 @@
     }
 
     .img-min-flow {
-      right: 20px;
+      left: 50%;
+      top: 50%;
+      transform: translateX(-50%) translateY(-50%);
       height: 18px;
     }
 
