--- a/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
+++ b/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
@@ -48,19 +48,29 @@
       display: none;
 
       .div-menu{
+        padding-left: 5px;
+        margin: 0 50px 0 25px;
         border-bottom: 1px solid #ddd;
+        font-size: $mobile-regular-font-size - 1;
+        color: #585E58;
+        height: 55px;
+
         &.noborder{
           border: none;
         }
       }
 
       .div-menu-last-item {
+        height: 55px;
         display: flex;
         padding: 10px 0;
         justify-content: center;
+        align-items: center;
+
         span{
-          font-size: 12px;
+          font-size: $mobile-small-font-size + 1;
           font-family: 'Montserrat-Bold';
+          color: #242222;
         }
       }
     }
@@ -88,9 +98,11 @@
 
   @media (max-width: 710px) {
     .dropdown__content {
-      margin-left: -15px;
+      margin-left: -20px;
       border-radius: 0;
-      box-shadow: 0px -1px 4px #aaa;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.6);
+      width: 326px;
+      height: 345px;
 
       .mobile{
         display: block;
@@ -114,7 +126,7 @@
 
   @media (max-width: 414px) {
     .dropdown__content {
-      margin-top: 10px;
+      margin-top: 14px;
       .div-menu {
         font-size: 12px;
       }
